# validator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: .pre-commit-config.yaml  black.yml  flake8.yml  pre-commit.yml  run_test.yml
apps/common/: admin.py  models.py  views.py
apps/methods/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/methods/generators/: imei_generator.py
apps/methods/migrations/: 0001_initial.py  0002_alter_email_created_at_alter_email_updated_at_and_more.py  0003_alter_imei_user.py
apps/methods/validators/: validators.py
apps/temp_mail/: admin.py  apps.py  helpers.py  models.py  permissions.py  querysets.py  serializers.py  tests.py  urls.py  views.py
apps/temp_mail/migrations/: 0001_initial.py  0002_domain_alter_tempmail_email_domain.py  0002_message_tempmail_messages.py  0002_tempmail_user.py  0003_remove_message_id_alter_message_message_id.py  0003_tempmail_email_domain_tempmail_email_username.py  0004_alter_tempmail_email_domain.py  0004_message_alter_tempmail_options_remove_tempmail_body_and_more.py  0005_alter_tempmail_temp_email.py  0006_alter_tempmail_email_domain.py  0007_tempmail_user.py  0008_message_temporary_mail.py  0009_remove_tempmail_message.py  0010_rename_temporary_mail_message_temp_email.py  0011_message_user.py  0012_alter_tempmail_temp_email.py  0013_alter_tempmail_email_domain.py  0014_remove_message_temp_email.py  0015_alter_message_message_id.py  0016_remove_message_id_alter_message_message_id.py  0017_alter_tempmail_options.py  0018_alter_tempmail_options.py
apps/temp_mail/scrapping/: scrapping.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_customuser_created_at_customuser_updated_at.py
apps/validations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/validations/generators/: jwt_generator.py
config/: settings.py  urls.py
(+7 files in other folders)
